--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "frizz"
-version = "0.1.1"
+version = "0.1.2"
 description = "A tool-assisted AI conversationalist."
 readme = "README.md"
 authors = [
@@ -18,7 +18,7 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
-packages = ["goose"]
+packages = ["frizz"]
 
 [dependency-groups]
 dev = [
