--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "frizz"
-version = "0.1.8"
+version = "0.1.9"
 description = "A tool-assisted AI conversationalist."
 readme = "README.md"
 authors = [
@@ -10,7 +10,7 @@ authors = [
 ]
 requires-python = ">=3.12"
 dependencies = [
-    "aikernel>=0.1.24",
+    "aikernel==0.1.25",
 ]
 
 [build-system]
