--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ authors = [
 ]
 requires-python = ">=3.12"
 dependencies = [
-    "aikernel==0.1.43",
+    "aikernel>=0.1.43",
     "google-cloud-aiplatform>=1.88.0",
 ]
 
